feat: enable direct StoneX spot trading